deploy/order-db/overlays/service-mesh/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-db
spec:
  hosts:
  - order-db
  http:
  - route:
    - destination:
        host: order-db
        subset: v1
